--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -17,6 +17,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/cart.css' %}">
 
     <style type="text/css">
     	.material-icons.md-36 { font-size: 36px; }
