--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-dark">
 
-	<a href="#" class="navbar-brand"><span class="text-success material-icons md-36">store</span></a>
+	<a href="/" class="navbar-brand"><span class="text-success material-icons md-36">store</span></a>
 	<button class="navbar-toggler bg-light" data-toggle="collapse" data-target="#navbar"><span class="navbar-toggler-icon"></span></button>
 	<div id="navbar" class="collapse navbar-collapse justify-content-between">
 	<ul class="navbar-nav">
@@ -8,15 +8,36 @@
 			<a class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle" data-toggle="dropdown" href="">Categories
 			</a>
 			<div class="dropdown-menu">
-				<a class="dropdown-item" href="">Categories1</a>
-				<a class="dropdown-item" href="">Categories2</a>
-				<a class="dropdown-item" href="">Categories3</a>
-				<a class="dropdown-item" href="">Categories4</a>
-				<a class="dropdown-item" href="">Categories5</a>
+				<a class="dropdown-item" href="{% url 'home' %}">All products</a>
+				{% for category in links %}
+				<a class="dropdown-item" href="{{category.get_url}}">{{category.name}}</a>
+				{% endfor %}				
 			</div>
 		</li>
-		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">Contacts</a></li>
-		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">About</a></li>
+		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">Contacts</a>
+		</li>
+		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">About</a>
+		</li>
+		{% if request.user.is_authenticated and request.user.first_name %}
+		<li class="nav-item"><span class="nav-link text-light text-uppercase font-weight-bold px-3">Welcome, {{request.user.first_name}}! <span class="material-icons cart-icon">account_circle</span></span>
+		</li>
+
+		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">Sign Out<span class="material-icons cart-icon">logout</span></a>
+		</li>
+
+		{% else %}
+		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="{% url 'signup' %}">Sign Up<span class="material-icons cart-icon">add</span></a>
+		</li>
+		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="{% url 'login' %}">Sign Out<span class="material-icons cart-icon">login</span></a>
+		</li>
+		{% endif %}
+		{% if item_count > 0 %}
+		<li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="{% url 'cart_detail' %}">
+		<span class="material-icons cart-icon">add_shopping_cart</span>
+		({{item_count}})
+		</a>
+		</li>
+		{% endif %}
 	</ul>
 
 	<form class="form-inline">
